--- a/_config.json
+++ b/_config.json
@@ -15,7 +15,7 @@
 		]
 	},
 
-	"title": "bxSlider",
-	"download": "https://github.com/stevenwanderski/bxslider-4/archive/master.zip",
+	"title": "bxSlider-z",
+	"download": "https://github.com/jave-joe/bxslider-z/archive/master.zip",
 	"donate": "http://www.bxslider.com"
 }
