--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bxslider",
+  "name": "bxslider-z",
   "description": "Touch enabled jQuery plugin for creating responsive carousels and sliders.",
-  "version": "4.2.12",
+  "version": "4.2.14",
   "homepage": "http://bxslider.com",
   "author": {
     "name": "Steven Wanderski",
@@ -11,10 +11,10 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/stevenwanderski/bxslider-4/bxslider-4.git"
+    "url": "https://github.com/jave-joe/bxslider-z/bxslider-z.git"
   },
   "bugs": {
-    "url": "https://github.com/stevenwanderski/bxslider-4/issues"
+    "url": "https://github.com/jave-joe/bxslider-z/issues"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
